// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ResponsiveGrid.svelte > should handle prop updates 1`] = `
<div>
  <container
    class="overflow-hidden three-col"
    tabindex="0"
  >
    <!---->
    <segment
      class="absolute h-full w-full col-1"
    >
      New Content for A
      <!---->
    </segment>
    
    <!---->
    <!---->
    
    
    <!---->
    <!---->
    
    
    
  </container>
  
</div>
`;

exports[`ResponsiveGrid.svelte > should handle prop updates for large 1`] = `
<div>
  <container
    class="overflow-hidden test-class"
    tabindex="0"
  >
    <!---->
    <!---->
    <segment
      class="col-1"
    >
       Content for A
      <!---->
    </segment>
    
    
    <!---->
    <!---->
    <segment
      class="col-2"
    >
       Content for B
      <!---->
    </segment>
    
    
    <!---->
    <!---->
    <segment
      class="col-3"
    >
       Content for C
      <!---->
    </segment>
    
    
    
  </container>
  
</div>
`;

exports[`ResponsiveGrid.svelte > should render a responsive grid 1`] = `
<div>
  <container
    class="overflow-hidden three-col"
    tabindex="0"
  >
    <!---->
    <!---->
    <segment
      class="col-1"
    >
       Content for A
      <!---->
    </segment>
    
    
    <!---->
    <!---->
    <segment
      class="col-2"
    >
       Content for B
      <!---->
    </segment>
    
    
    <!---->
    <!---->
    <segment
      class="col-3"
    >
       Content for C
      <!---->
    </segment>
    
    
    
  </container>
  
</div>
`;

exports[`ResponsiveGrid.svelte > should render a responsive grid for small devices 1`] = `
<div>
  <container
    class="overflow-hidden three-col"
    tabindex="0"
  >
    <!---->
    <segment
      class="absolute h-full w-full col-1"
    >
       Content for A
      <!---->
    </segment>
    
    <!---->
    <!---->
    
    
    <!---->
    <!---->
    
    
    
  </container>
  
</div>
`;

exports[`ResponsiveGrid.svelte > should switch columns on left and right arrow keys 1`] = `
<div>
  <container
    class="overflow-hidden three-col"
    tabindex="0"
  >
    <!---->
    <segment
      class="absolute h-full w-full col-1"
    >
       Content for A
      <!---->
    </segment>
    
    <!---->
    <!---->
    
    
    <!---->
    <!---->
    
    
    
  </container>
  
</div>
`;

exports[`ResponsiveGrid.svelte > should switch columns on left and right arrow keys 2`] = `
<div>
  <container
    class="overflow-hidden three-col"
    tabindex="0"
  >
    <!---->
    <segment
      class="absolute h-full w-full col-1"
    >
       Content for A
      <!---->
    </segment>
    <!---->
    <segment
      class="col-1"
    >
       Content for A
      <!---->
    </segment>
    
    
    <!---->
    <!---->
    <segment
      class="col-2"
    >
       Content for B
      <!---->
    </segment>
    
    
    <!---->
    <!---->
    <segment
      class="col-3"
    >
       Content for C
      <!---->
    </segment>
    
    
    
  </container>
  
</div>
`;

exports[`ResponsiveGrid.svelte > should switch columns on left and right arrow keys 3`] = `
<div>
  <container
    class="overflow-hidden three-col"
    tabindex="0"
  >
    <!---->
    <segment
      class="absolute h-full w-full col-1"
    >
       Content for A
      <!---->
    </segment>
    <!---->
    <segment
      class="col-1"
    >
       Content for A
      <!---->
    </segment>
    
    
    <!---->
    <!---->
    <segment
      class="col-2"
    >
       Content for B
      <!---->
    </segment>
    
    
    <!---->
    <!---->
    <segment
      class="col-3"
    >
       Content for C
      <!---->
    </segment>
    
    
    
  </container>
  
</div>
`;
